--- a/app/views/layouts/prepros.cfg
+++ b/app/views/layouts/prepros.cfg
@@ -61,6 +61,85 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "7da4c89f": {
+          "id": "7da4c89f",
+          "path": "cards.html",
+          "output": "cards.html",
+          "name": "cards.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1a0b88dc": {
+          "id": "1a0b88dc",
+          "path": "stylesheet2.css",
+          "output": "stylesheet2-dist.css",
+          "name": "stylesheet2.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7a6c259b": {
+          "id": "7a6c259b",
+          "path": "bbq.jpg",
+          "output": "bbq.jpg",
+          "name": "bbq.jpg",
+          "category": "IMAGE",
+          "size": 254906,
+          "type": "jpg",
+          "initialSize": 254906,
+          "optimized": false,
+          "height": 652,
+          "width": 1194
+        },
+        "8c39d97a": {
+          "id": "8c39d97a",
+          "path": "eggslut.jpg",
+          "output": "eggslut.jpg",
+          "name": "eggslut.jpg",
+          "category": "IMAGE",
+          "size": 185801,
+          "type": "jpg",
+          "initialSize": 185801,
+          "optimized": false,
+          "height": 652,
+          "width": 1194
+        },
+        "c58401ba": {
+          "id": "c58401ba",
+          "path": "urth.jpg",
+          "output": "urth.jpg",
+          "name": "urth.jpg",
+          "category": "IMAGE",
+          "size": 164116,
+          "type": "jpg",
+          "initialSize": 164116,
+          "optimized": false,
+          "height": 652,
+          "width": 1194
+        },
+        "c2cac21e": {
+          "id": "c2cac21e",
+          "path": "firstfridays.jpg",
+          "output": "firstfridays.jpg",
+          "name": "firstfridays.jpg",
+          "category": "IMAGE",
+          "size": 213047,
+          "type": "jpg",
+          "initialSize": 213047,
+          "optimized": false,
+          "height": 652,
+          "width": 1194
         }
       },
       "deploymentHistory": {},
